[package]
name = "ballast"
version = "0.1.0"
authors = ["Chase Wilson <contact@chasewilson.dev>"]
edition = "2018"

[features]
default = []
logging = ["log"]
minimalloc = ["mimalloc"]

[dependencies.log]
version = "0.4.8"
default-features = false
optional = true

[dependencies.mimalloc]
version = "0.1.17"
optional = true

[target.'cfg(target_family = "windows")'.dependencies.winapi]
version = "0.3.8"
default-features = false
features = ["sysinfoapi"]

[target.'cfg(target_family = "unix")'.dependencies]
libc = "0.2.67"

[dev-dependencies.color-backtrace]
default-features = false
version = "0.3.0"

[dev-dependencies.simple_logger]
default-features = false
version = "1.6.0"
